force-app/main/default/objects/FieloEE__Branch__c/FieloEE__Branch__c.object-meta.xml
<CustomObject>
    <description>Your business’ branches or points of sale where members can generate points.</description>
    <label>Branch</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>