force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__Country__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Country__c</fullName>
    <description>Country where the branch is located.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the country where your branch is located.</inlineHelpText>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>