force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__Street__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Street__c</fullName>
    <description>Street where this branch is located.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the street where your branch is located.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>