force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__ZipCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ZipCode__c</fullName>
    <description>Zip code of the branch address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the ZIP code for your branch.</inlineHelpText>
    <label>Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>